# CHANGELOG

## Unreleased

## 0.5.1

- Bug with bad merge missing changes in release

## 0.5.0

- Add create templates helper script

## 0.4.0

- Export mergeOverrides helper function
- Add better error handling when there are errors in a layer