@@ -1,0 +1,24 @@
+module.exports.context = {
+  sources: {
+    root: 'Example'
+  },
+  colors: {
+    backgroundLow: 'red',
+    backgroundHigh: 'blue'
+  }
+};
+
+module.exports.template = {
+  version: 8,
+  name: 'simple',
+  sources: {
+    Example: {
+      type: 'vector',
+      url: 'https://example.com/source.json'
+    }
+  },
+  sprite: 'https://example.com/sprites/sprite',
+  glyphs: 'https://example.com/{fontstack}/{range}.pbf',
+  layers: ['layer1', 'layer2'],
+  id: 'example-simple'
+};
