@@ -23,6 +23,7 @@
     "chalk": "4.1.2",
     "fast-glob": "^3.2.11",
     "json-stringify-pretty-compact": "^3.0.0",
+    "lodash.clonedeep": "^4.5.0",
     "mapbox-gl-style-format": "git+https://github.com/stamen/mapbox-gl-style-format#v0.1.1",
     "yargs": "^17.2.1"
   },
