@@ -20,19 +20,19 @@ describe('mergeOverrides', () => {
   test('works with paint overrides', () => {
     const base = {
       paint: {
-        "fill-color": "red"
+        'fill-color': 'red'
       }
     };
     const overrides = {
       paint: {
-        "fill-opacity": 0.5
+        'fill-opacity': 0.5
       }
     };
 
     const expected = {
       paint: {
-        "fill-color": "red",
-        "fill-opacity": 0.5
+        'fill-color': 'red',
+        'fill-opacity': 0.5
       }
     };
 
@@ -43,19 +43,19 @@ describe('mergeOverrides', () => {
   test('works with layout overrides', () => {
     const base = {
       layout: {
-        "line-cap": "round"
+        'line-cap': 'round'
       }
     };
     const overrides = {
       layout: {
-        "line-join": "round"
+        'line-join': 'round'
       }
     };
 
     const expected = {
       layout: {
-        "line-cap": "round",
-        "line-join": "round"
+        'line-cap': 'round',
+        'line-join': 'round'
       }
     };
 
@@ -69,16 +69,16 @@ describe('mergeOverrides', () => {
     };
     const overrides = {
       paint: {
-        "fill-color": "red",
-        "fill-opacity": 0.5
+        'fill-color': 'red',
+        'fill-opacity': 0.5
       }
     };
 
     const expected = {
       id: 'base',
       paint: {
-        "fill-color": "red",
-        "fill-opacity": 0.5
+        'fill-color': 'red',
+        'fill-opacity': 0.5
       }
     };
 
@@ -89,21 +89,21 @@ describe('mergeOverrides', () => {
   test('works with paint overrides, same properties', () => {
     const base = {
       paint: {
-        "fill-color": "green",
-        "fill-opacity": 1
+        'fill-color': 'green',
+        'fill-opacity': 1
       }
     };
     const overrides = {
       paint: {
-        "fill-color": "red",
-        "fill-opacity": 0.5
+        'fill-color': 'red',
+        'fill-opacity': 0.5
       }
     };
 
     const expected = {
       paint: {
-        "fill-color": "red",
-        "fill-opacity": 0.5
+        'fill-color': 'red',
+        'fill-opacity': 0.5
       }
     };
 
@@ -114,24 +114,34 @@ describe('mergeOverrides', () => {
   test('works with paint overrides, partial properties', () => {
     const base = {
       paint: {
-        "fill-color": "green",
-        "fill-opacity": 1
+        'fill-color': 'green',
+        'fill-opacity': 1
       }
     };
     const overrides = {
       paint: {
-        "fill-opacity": 0.5
+        'fill-opacity': 0.5
       }
     };
 
     const expected = {
       paint: {
-        "fill-color": "green",
-        "fill-opacity": 0.5
+        'fill-color': 'green',
+        'fill-opacity': 0.5
       }
     };
 
     const actual = mergeOverrides(base, overrides);
     expect(actual).toEqual(expected);
+  });
+
+  test('does not remove undefined properties', () => {
+    const base = { id: 'base', paint: { 'line-color': undefined } };
+    const overrides = {};
+
+    const actual = mergeOverrides(base, overrides);
+
+    // toStrictEqual doesn't ignore undefined values
+    expect(actual).toStrictEqual(base);
   });
 });
